test/samples/valid/interp/neg_mod.maruir
fun main()
locals a: i16, b: i16, c: u8, e: bool;
{
    entry:
        b := i16(-32768);
        a := b % i16(7);

        assert(a == i16(6));

        return;
}
