test/samples/invalid/tc/fun_call_rets2.maruir
fun add(a: u8, b: u8): u8
locals res: u8;
{
    entry:
        res := a + b;
        return res;
}


fun main()
locals a: u8, b: i16, c: i32;
{
    entry:
    call add(u8(1), u8(2));
    return;
}
